// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/LogFace extended renders correctly: Basic Info key value 1`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Name-Runny  NULL Danny"
>
  <span
    className="prop"
  >
     
    Name
    :
  </span>
  <span
    className="value"
  >
    Runny  NULL Danny
  </span>
</div>
`;

exports[`containers/LogFace extended renders correctly: Basic Info key value 2`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Patient ID-"
>
  <span
    className="prop"
  >
     
    Patient ID
    :
  </span>
  <span
    className="value"
  />
</div>
`;

exports[`containers/LogFace extended renders correctly: Basic Info key value 3`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Age-N/A"
>
  <span
    className="prop"
  >
     
    Age
    :
  </span>
  <span
    className="value"
  >
    N/A
  </span>
</div>
`;

exports[`containers/LogFace extended renders correctly: Basic Info key value 4`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Location-"
>
  <span
    className="prop"
  >
     
    Location
    :
  </span>
  <span
    className="value"
  />
</div>
`;

exports[`containers/LogFace extended renders correctly: Basic Info key value 5`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Current Weight-N/A"
>
  <span
    className="prop"
  >
     
    Current Weight
    :
  </span>
  <span
    className="value"
  >
    N/A
  </span>
</div>
`;

exports[`containers/LogFace extended renders correctly: Basic Info key value 6`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Current Height-N/A"
>
  <span
    className="prop"
  >
     
    Current Height
    :
  </span>
  <span
    className="value"
  >
    N/A
  </span>
</div>
`;

exports[`containers/LogFace extended renders correctly: Basic Info key value 7`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Health Insurance number- NA"
>
  <span
    className="prop"
  >
     
    Health Insurance number
    :
  </span>
  <span
    className="value"
  >
     NA
  </span>
</div>
`;

exports[`containers/LogFace extended renders correctly: Basic Info key value 8`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Household Type-  NULL"
>
  <span
    className="prop"
  >
     
    Household Type
    :
  </span>
  <span
    className="value"
  >
      NULL
  </span>
</div>
`;

exports[`containers/LogFace extended renders correctly: Basic Info key value 9`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Ethnicity-  NULL"
>
  <span
    className="prop"
  >
     
    Ethnicity
    :
  </span>
  <span
    className="value"
  >
      NULL
  </span>
</div>
`;

exports[`containers/LogFace extended renders correctly: Basic Info key value 10`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="HandWashing-  NULL"
>
  <span
    className="prop"
  >
     
    HandWashing
    :
  </span>
  <span
    className="value"
  >
      NULL
  </span>
</div>
`;

exports[`containers/LogFace extended renders correctly: Basic Info key value 11`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Toilet-  NULL"
>
  <span
    className="prop"
  >
     
    Toilet
    :
  </span>
  <span
    className="value"
  >
      NULL
  </span>
</div>
`;

exports[`containers/LogFace extended renders correctly: Basic Info key value 12`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Current Blood Pressure-  NULL"
>
  <span
    className="prop"
  >
     
    Current Blood Pressure
    :
  </span>
  <span
    className="value"
  >
      NULL
  </span>
</div>
`;

exports[`containers/LogFace extended renders correctly: Basic Info key value 13`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Current Gravidity-N/A"
>
  <span
    className="prop"
  >
     
    Current Gravidity
    :
  </span>
  <span
    className="value"
  >
    N/A
  </span>
</div>
`;

exports[`containers/LogFace extended renders correctly: Basic Info key value 14`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Current EDD-30y "
>
  <span
    className="prop"
  >
     
    Current EDD
    :
  </span>
  <span
    className="value"
  >
    30y 
  </span>
</div>
`;

exports[`containers/LogFace extended renders correctly: Basic Info key value 15`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Current Parity-N/A"
>
  <span
    className="prop"
  >
     
    Current Parity
    :
  </span>
  <span
    className="value"
  >
    N/A
  </span>
</div>
`;

exports[`containers/LogFace extended renders correctly: Basic Info key value 16`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Previous Pregnancy Risk- NULL"
>
  <span
    className="prop"
  >
     
    Previous Pregnancy Risk
    :
  </span>
  <span
    className="value"
  >
     NULL
  </span>
</div>
`;

exports[`containers/LogFace extended renders correctly: titleDiv 1`] = `
<div
  id="titleDiv"
>
  <h2
    id="patients_title"
  >
    Patient Details
  </h2>
</div>
`;
